--- a/config/.prettierrc
+++ b/config/.prettierrc
@@ -6,5 +6,7 @@
   "trailingComma": "all",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "printWidth": 120
+  "printWidth": 150,
+  "bracketSameLine": true,
+  "htmlWhitespaceSensitivity": "ignore"
 }
