--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     types: [closed]
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -21,8 +22,14 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Upload `dist` folder as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-artifact
+          path: ./dist
+
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
