--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "htmlhint": "^1.1.4",
     "lint-staged": "^15.2.10",
